src/CardGame.css
@import url("https://fonts.googleapis.com/css?family=Carter+One&display=swap");

.card-game-container {
  width: 100%;
}

.info-container {
  display: flex;
  font-size: 36px;
  justify-content: space-evenly;
  background: #999900;
  color: #33827b;
  font-family: "Carter One", cursive;
  text-align: center;
}

.info-difficulty {
  margin: 0;
}

.info-moves {
  margin: 0;
  border-left: 1px solid black;
  border-right: 1px solid black;
  padding: 0 10px;
}

.info-time {
  margin: 0;
}

.cards-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  row-gap: 15px;
  justify-items: center;
  margin-top: 50px;
}

@media screen and (max-width: 1280px) and (max-height: 720px) {
  .cards-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    row-gap: 15px;
    justify-items: center;
    margin-top: 20px;
  }
}

.cards-easy .card-flip-container,
.cards-easy .card-front,
.cards-easy .card-back {
  width: 150px;
  height: 200px;
  border-radius: 20px;
  font-size: 36px;
}

.card-flip-container {
  perspective: 1000px;
}

.cards-medium .card-flip-container,
.cards-medium .card-front,
.cards-medium .card-back {
  width: 120px;
  height: 145px;
  border-radius: 20px;
  font-size: 36px;
}

.cards-hard .card-flip-container,
.cards-hard .card-front,
.cards-hard .card-back {
  width: 80px;
  height: 100px;
  border-radius: 20px;
  font-size: 36px;
}

.card-flipper {
  transition: 0.6s;
  transform-style: preserve-3d;

  position: relative;
}

.card-front,
.card-back {
  backface-visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.card-front {
  z-index: 2;
  transform: rotateY(0deg);
  background: #69546b;
  color: #999900;
  border: 2px solid #999900;
}

.card-back {
  transform: rotateY(180deg);
  background: #999900;
  color: #69546b;
  border: 2px solid #69546b;
}

.card-icon {
  pointer-events: none;
}

.card-flip-container.card-flip .card-flipper {
  transform: rotateY(180deg);
}

.pair-found {
  background: darkgreen;
  color: #999900;
  border: 2px solid #999900;
}

.won-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 36px;
  font-family: "Carter One", cursive;
  margin-top: 100px;
  color: #999900;
}

@media screen and (max-width: 1280px) and (max-height: 720px) {
  .won-container {
    margin-top: 40px;
  }
}

.trophy {
  font-size: 200px;
  margin-bottom: 20px;
}

.won-description {
  margin: 0;
}

.lost-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 36px;
  color: black;
  font-family: "Carter One", cursive;
  margin-top: 100px;
}

@media screen and (max-width: 1280px) and (max-height: 720px) {
  .lost-container {
    margin-top: 40px;
  }
}

.thumbs-up {
  font-size: 200px;
  margin-bottom: 20px;
}

.lost-description {
  margin: 0;
}

.start-new-game-again {
  margin-top: 10px;
  font-size: 36px;
  font-family: "Carter One", cursive;
  background: #69546b;
  color: #999900;
  border: none;
  border-radius: 20px;
}

.start-new-game-again:hover {
  background: #999900;
  color: #69546b;
  cursor: pointer;
}

@media screen and (min-width: 1500px) {
  .cards-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    row-gap: 15px;
    justify-items: center;
    margin-top: 50px;
  }
}

